CO-1301 Mobile UX, CO-1303 refactor tables, CO-1307: update individual notification for improved form on mobile - also resolve CO-967

--- a/app/webroot/css/co-base.css
+++ b/app/webroot/css/co-base.css
@@ -199,7 +199,18 @@ body.logged-in #user-menu {
 #notifications .notification-created a {
   color: #444;
 }
-/* Notification table */
+/* Notification page */
+ul.form-list.notification-list .field-name {
+  font-weight: bold;
+  vertical-align: top;
+  max-width: 240px;
+}
+ul.form-list.notification-list .field-info {
+  vertical-align: top;
+}
+.field-email p {
+  margin-bottom: 0.25em;
+}
 form#notificationStatus {
   clear: left;
   margin: 0.5em 0;
